--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ nav a{
 <nav>
 	  <a href="index.html">Relationship Scatter Plot</a>
 	  <a href="TeamStats.html">Team Statistic</a>
-	  <a href="teamShot.html">Playoff Shot Location Chart</a>f="teamShot.html">Playoff Shot Location Chart</a>
+	  <a href="teamShot.html">Playoff Shot Location Chart</a>
 </nav>
 <div style= "float: left" id = "div1">
 <p><span><label for="x-axis">Select x-axis</label></span>
