--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ nav a{
 	color: white;
 	text-decoration: none;
 	margin: auto;
+	font: "Times New Roman";
 }
 </style>
 <body bgcolor="gray" bgopacity = "0.5">
