--- a/teamShot.html
+++ b/teamShot.html
@@ -48,6 +48,7 @@
               color: white;
               text-decoration: none;
               margin: auto;
+              font: Times New Roman;
             }
         </style>
     </head>
