--- a/TeamStats.html
+++ b/TeamStats.html
@@ -55,6 +55,7 @@
             color: white;
             text-decoration: none;
             margin: auto;
+            font: Times New Roman;
           }
         </style>
     </head>
