--- a/teamShot.html
+++ b/teamShot.html
@@ -48,7 +48,7 @@
               color: white;
               text-decoration: none;
               margin: auto;
-              font: Times New Roman;
+              font: 10px sans-serif;
             }
         </style>
     </head>
