--- a/TeamStats.html
+++ b/TeamStats.html
@@ -55,7 +55,7 @@
             color: white;
             text-decoration: none;
             margin: auto;
-            font: Times New Roman;
+            font: 10px sans-serif;
           }
         </style>
     </head>
