--- a/TeamStats.html
+++ b/TeamStats.html
@@ -56,6 +56,7 @@
             text-decoration: none;
             margin: auto;
             font: 10px sans-serif;
+            font-family: "Times New Roman", Times, serif;
           }
         </style>
     </head>
