--- a/TeamStats.html
+++ b/TeamStats.html
@@ -55,7 +55,7 @@
             color: white;
             text-decoration: none;
             margin: auto;
-            font: 10px sans-serif;
+            font-size: 12px;
             font-family: "Times New Roman", Times, serif;
           }
         </style>
