--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ nav a{
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 
 
-<div id="vis-container1" width = "1000px" height = "1000px">
+<div id="vis-container1" width = "1000px" height = "1000px" style= "float: right">
 	
 </div>
 <div id="vis-container"></div>
