--- a/teamShot.html
+++ b/teamShot.html
@@ -49,6 +49,7 @@
               text-decoration: none;
               margin: auto;
               font: 10px sans-serif;
+              font-family: "Times New Roman", Times, serif;
             }
         </style>
     </head>
