--- a/teamShot.html
+++ b/teamShot.html
@@ -48,6 +48,7 @@
               color: white;
               text-decoration: none;
               margin: auto;
+              font-size: 16px;
               font-family: "Times New Roman", Times, serif;
             }
         </style>
