--- a/teamShot.html
+++ b/teamShot.html
@@ -61,7 +61,7 @@
               <a href="teamShot.html">Playoff Shot Location Chart</a>
             </nav>
 
-         <p><span><label for="x-axis" font = "12px">Selecttion Dropdown</label></span>
+         <p><span><label for="x-axis" font-size = "18px">Selecttion Dropdown</label></span>
         <div id='vis-container'>
 
 
