--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@ nav a{
 	margin: auto;
 	font: "Times New Roman";
 }
+nav b{
+	color: white;
+	text-decoration: none;
+	margin: auto;
+	align-content: center;
+}
 </style>
 <body bgcolor="gray" bgopacity = "0.5">
+<nav>  <b>NBA Data Analysis</b> </nav>
 <nav>
 	  <a href="index.html">Relationship Scatter Plot</a>
 	  <a href="TeamStats.html">Team Statistic</a>
