--- a/teamShot.html
+++ b/teamShot.html
@@ -51,10 +51,17 @@
               font-size: 16px;
               font-family: "Times New Roman", Times, serif;
             }
+
+            nav b{
+                color: white;
+                text-decoration: none;
+                margin: auto;
+                align-content: center;
+            }
         </style>
     </head>
     <body bgcolor="gray">
-
+            <nav>  <b>NBA Data Analysis</b> </nav>
             <nav>
               <a href="index.html">Relationship Scatter Plot</a>
               <a href="TeamStats.html">Team Statistic</a>
