--- a/teamShot.html
+++ b/teamShot.html
@@ -11,6 +11,11 @@
         select {
             display: block;
         }
+
+        label {
+            font: 12px sans-serif;
+        }
+
         .circle {
             fill: purple;
             stroke: black;
@@ -68,7 +73,7 @@
               <a href="teamShot.html">Playoff Shot Location Chart</a>
             </nav>
 
-         <p><span><label for="x-axis" font-size = "18px">Selecttion Dropdown</label></span>
+         <p><span><label for="x-axis">Selecttion Dropdown</label></span>
         <div id='vis-container'>
 
 
