--- a/teamShot.html
+++ b/teamShot.html
@@ -62,6 +62,8 @@
                 text-decoration: none;
                 margin: auto;
                 align-content: center;
+                font-size: 16px;
+                font-family: "Times New Roman", Times, serif;
             }
         </style>
     </head>
