--- a/TeamStats.html
+++ b/TeamStats.html
@@ -63,6 +63,8 @@
                 text-decoration: none;
                 margin: auto;
                 align-content: center;
+                font-size: 16px;
+                font-family: "Times New Roman", Times, serif;
             }
         </style>
     </head>
