--- a/teamShot.html
+++ b/teamShot.html
@@ -44,8 +44,8 @@
             }
 
           nav{
-              height: 50px;
-              background-color: black;
+              height: 25px;
+              background-color: steelblue;
               display: flex;
             }
 
@@ -70,7 +70,7 @@
     <body bgcolor="gray">
             <nav>  <b>NBA Data Analysis</b> </nav>
             <nav>
-              <a href="index.html">Relationship Scatter Plot</a>
+              <a href="index.html">Regular Season Statistics</a>
               <a href="TeamStats.html">Team Statistic</a>
               <a href="teamShot.html">Playoff Shot Location Chart</a>
             </nav>
