--- a/TeamStats.html
+++ b/TeamStats.html
@@ -46,8 +46,8 @@
             }
 
           nav{
-            height: 50px;
-            background-color: black;
+            height: 25px;
+            background-color: steelblue;
             display: flex;
           }
 
@@ -71,11 +71,11 @@
 
 
     
-    <body bgcolor="gray">
+    <body bgcolor="white">
         <nav>  <b>NBA Data Analysis</b> </nav>
 
         <nav>
-          <a href="index.html">Relationship Scatter Plot</a>
+          <a href="index.html">Regular Season Statistics</a>
           <a href="TeamStats.html">Team Statistic</a>
           <a href="teamShot.html">Playoff Shot Location Chart</a>
         </nav>
