--- a/teamShot.html
+++ b/teamShot.html
@@ -67,7 +67,7 @@
             }
         </style>
     </head>
-    <body bgcolor="gray">
+    <body bgcolor="white">
             <nav>  <b>NBA Data Analysis</b> </nav>
             <nav>
               <a href="index.html">Regular Season Statistics</a>
