--- a/TeamStats.html
+++ b/TeamStats.html
@@ -182,7 +182,8 @@
 
                 canvas.append("text")
                 .text("Point per Game for Each Position")
-                .attr("transform", "translate(200,370)");
+                .attr("font-size", "14px")
+                .attr("transform", "translate(200,100)");
 
                 // Make x-axis and add to canvas
                 var xAxis = d3.svg.axis()
@@ -291,7 +292,8 @@
 
                  canvas2.append("text")
                 .text("Win Percentage per Region")
-                .attr("transform", "translate(200,370)");
+                .attr("font-size", "14px")
+                .attr("transform", "translate(200,100)");
 
 
 
@@ -386,7 +388,8 @@
 
                  canvas1.append("text")
                 .text("Age Distribution")
-                .attr("transform", "translate(200,370)");
+                .attr("font-size", "14px")
+                .attr("transform", "translate(200,100)");
 
 
 
@@ -477,8 +480,8 @@
 
                  canvas3.append("text")
                 .text("Win Percentage by Month")
-                .attr("transform", "translate(200,370)");
-
+                .attr("font-size", "14px")
+                .attr("transform", "translate(200,100)");
 
 
                 // Make y-axis and add to canvas
