--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ nav b{
 	  <a href="index.html">Regular Season Statistics</a>
 	  <a href="TeamStats.html">Team Statistic</a>
 	  <a href="teamShot.html">Playoff Shot Location Chart</a>
+	  <a href="documentation.html">Documentation</a>
+      <a href="documentation.html">Video</a>
 </nav>
 <div style= "float: right" id = "div1" width = "700px">
 <p><span><label for="x-axis">Select x-axis</label></span>
