--- a/teamShot.html
+++ b/teamShot.html
@@ -73,6 +73,8 @@
               <a href="index.html">Regular Season Statistics</a>
               <a href="TeamStats.html">Team Statistic</a>
               <a href="teamShot.html">Playoff Shot Location Chart</a>
+              <a href="documentation.html">Documentation</a>
+              <a href="documentation.html">Video</a>
             </nav>
 
          <p><span><label for="x-axis">Selecttion Dropdown</label></span>
