--- a/TeamStats.html
+++ b/TeamStats.html
@@ -101,6 +101,8 @@
           <a href="index.html">Regular Season Statistics</a>
           <a href="TeamStats.html">Team Statistic</a>
           <a href="teamShot.html">Playoff Shot Location Chart</a>
+          <a href="documentation.html">Documentation</a>
+          <a href="documentation.html">Video</a>
         </nav>
         <div id='vis-container'>
             <svg id = 'svg2' width = "350" height = "300"style= "float: right"></svg>
