--- a/teamShot.html
+++ b/teamShot.html
@@ -74,7 +74,7 @@
               <a href="TeamStats.html">Team Statistic</a>
               <a href="teamShot.html">Playoff Shot Location Chart</a>
               <a href="documentation.html">Documentation</a>
-              <a href="documentation.html">Video</a>
+              <a href="https://youtu.be/jkRCiBvewWw">Video</a>
             </nav>
 
          <p><span><label for="x-axis">Selecttion Dropdown</label></span>
