--- a/TeamStats.html
+++ b/TeamStats.html
@@ -102,7 +102,7 @@
           <a href="TeamStats.html">Team Statistic</a>
           <a href="teamShot.html">Playoff Shot Location Chart</a>
           <a href="documentation.html">Documentation</a>
-          <a href="documentation.html">Video</a>
+          <a href="https://youtu.be/jkRCiBvewWw">Video</a>
         </nav>
         <div id='vis-container'>
             <svg id = 'svg2' width = "350" height = "300"style= "float: right"></svg>
